--- a/dingo_bringup/package.xml
+++ b/dingo_bringup/package.xml
@@ -14,8 +14,9 @@
   <exec_depend>dingo_base</exec_depend>
   <exec_depend>lms1xx</exec_depend>
   <exec_depend>realsense2_camera</exec_depend>
+  <exec_depend>robot_upstart</exec_depend>
+  <exec_depend>socat</exec_depend>
   <exec_depend>urg_node</exec_depend>
-  <exec_depend version_gte="0.1.1">robot_upstart</exec_depend>
 
   <export>
   </export>
