[dingo_base] Added network based logger.

--- a/dingo_base/CMakeLists.txt
+++ b/dingo_base/CMakeLists.txt
@@ -21,7 +21,8 @@ add_executable(dingo_node
   src/dingo_cooling.cpp
   src/dingo_diagnostic_updater.cpp
   src/dingo_hardware.cpp
-  src/dingo_lighting.cpp)
+  src/dingo_lighting.cpp
+  src/dingo_logger.cpp)
 target_link_libraries(dingo_node ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 add_dependencies(dingo_node ${catkin_EXPORTED_TARGETS})
 
