Tidy up the wheel expectations, add the wi-fi connected topic to general

--- a/dingo_base/config/diagnostic_analyzers_common.yaml
+++ b/dingo_base/config/diagnostic_analyzers_common.yaml
@@ -14,7 +14,8 @@ analyzers:
           'dingo_node: User voltage supplies',
           'dingo_node: Current consumption',
           'dingo_node: Power consumption' ,
-          'dingo_node: Temperature' ]
+          'dingo_node: Temperature',
+          'dingo_node: Wi-Fi connected']
       sensors:
         type: diagnostic_aggregator/GenericAnalyzer
         path: Sensor Topics
