--- a/dingo_base/config/diagnostic_analyzers_diff.yaml
+++ b/dingo_base/config/diagnostic_analyzers_diff.yaml
@@ -9,5 +9,5 @@ analyzers:
         remove_prefix: 'dingo_node'
         timeout: 5.0
         expected: [
-          'dingo_node: Puma motor driver on: Dingo-D left_wheel with CAN ID (2)',
-          'dingo_node: Puma motor driver on: Dingo-D right_wheel with CAN ID (3)']
+          'dingo_node: Puma motor driver on: left_wheel with CAN ID (2)',
+          'dingo_node: Puma motor driver on: right_wheel with CAN ID (3)']
