--- a/dingo_base/config/diagnostic_analyzers_omni.yaml
+++ b/dingo_base/config/diagnostic_analyzers_omni.yaml
@@ -9,7 +9,7 @@ analyzers:
         remove_prefix: 'dingo_node'
         timeout: 5.0
         expected: [
-          'dingo_node: Puma motor driver on: rear_left_wheel with CAN ID (2)',
-          'dingo_node: Puma motor driver on: rear_right_wheel with CAN ID (3)',
-          'dingo_node: Puma motor driver on: front_right_wheel with CAN ID (4)',
-          'dingo_node: Puma motor driver on: front_left_wheel with CAN ID (5)']
+          'dingo_node: Puma motor driver on: front_left_wheel with CAN ID (2)',
+          'dingo_node: Puma motor driver on: front_right_wheel with CAN ID (3)',
+          'dingo_node: Puma motor driver on: rear_right_wheel with CAN ID (4)',
+          'dingo_node: Puma motor driver on: rear_left_wheel with CAN ID (5)']
