Remove the wi-fi connected entry

--- a/dingo_base/config/diagnostic_analyzers_common.yaml
+++ b/dingo_base/config/diagnostic_analyzers_common.yaml
@@ -14,8 +14,7 @@ analyzers:
           'dingo_node: User voltage supplies',
           'dingo_node: Current consumption',
           'dingo_node: Power consumption' ,
-          'dingo_node: Temperature',
-          'dingo_node: Wi-Fi connected']
+          'dingo_node: Temperature']
       sensors:
         type: diagnostic_aggregator/GenericAnalyzer
         path: Sensor Topics
