--- a/dingo_bringup/package.xml
+++ b/dingo_bringup/package.xml
@@ -17,6 +17,8 @@
   <exec_depend>socat</exec_depend>
   <exec_depend>urg_node</exec_depend>
 
+  <test_depend>roslaunch</test_depend>
+
   <export>
   </export>
 </package>
