--- a/dingo_bringup/package.xml
+++ b/dingo_bringup/package.xml
@@ -16,6 +16,7 @@
   <exec_depend>robot_upstart</exec_depend>
   <exec_depend>socat</exec_depend>
   <exec_depend>urg_node</exec_depend>
+  <exec_depend>velodyne_pointcloud</exec_depend>
 
   <export>
   </export>
