--- a/dingo_robot/package.xml
+++ b/dingo_robot/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="3">
   <name>dingo_robot</name>
   <version>0.1.3</version>
   <description>Metapackage of software to install on Dingo.</description>
@@ -9,13 +9,11 @@
 
   <license>BSD</license>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <run_depend>dingo_bringup</run_depend>
-  <!-- Removed dependency on firmware for now. -->
-  <!-- <run_depend>dingo_firmware</run_depend> -->
+  <exec_depend>dingo_bringup</exec_depend>
 
   <export>
-    <metapackage />
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
