--- a/dingo_base/package.xml
+++ b/dingo_base/package.xml
@@ -30,7 +30,7 @@
   <exec_depend>imu_filter_madgwick</exec_depend>
   <exec_depend>dingo_control</exec_depend>
   <exec_depend>dingo_description</exec_depend>
-  <exec_depend>python-scipy</exec_depend>
+  <exec_depend>python3-scipy</exec_depend>
   <exec_depend>rosserial_python</exec_depend>
   <exec_depend>teleop_twist_joy</exec_depend>
   <exec_depend>tf</exec_depend>
