--- a/dingo_base/package.xml
+++ b/dingo_base/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package format="2">
+<package format="3">
   <name>dingo_base</name>
   <version>0.1.3</version>
   <description>Dingo's mobility and sensor base.</description>
@@ -9,9 +9,9 @@
 
   <license>BSD</license>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <build_depend>hardware_interface</build_depend>
+  <!-- <build_depend>hardware_interface</build_depend>
   <build_depend>roscpp</build_depend>
 
   <depend>controller_manager</depend>
@@ -37,8 +37,9 @@
   <exec_depend>topic_tools</exec_depend>
 
   <test_depend>roslaunch</test_depend>
-  <test_depend>roslint</test_depend>
+  <test_depend>roslint</test_depend> -->
 
   <export>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
