--- a/dingo_bringup/package.xml
+++ b/dingo_bringup/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package format="2">
+<package format="3">
   <name>dingo_bringup</name>
   <version>0.1.3</version>
   <description>Scripts for installing Dingo's robot software.</description>
@@ -8,8 +8,8 @@
 
   <license>BSD</license>
 
-  <buildtool_depend>catkin</buildtool_depend>
-  <exec_depend>depth_image_proc</exec_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <!-- <exec_depend>depth_image_proc</exec_depend>
   <exec_depend>dingo_base</exec_depend>
   <exec_depend>lms1xx</exec_depend>
   <exec_depend>realsense2_camera</exec_depend>
@@ -18,8 +18,9 @@
   <exec_depend>urg_node</exec_depend>
   <exec_depend>velodyne_pointcloud</exec_depend>
 
-  <test_depend>roslaunch</test_depend>
+  <test_depend>roslaunch</test_depend> -->
 
   <export>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
