Setup scripts to automatically set DINGO_OMNI and DINGO_WIRELESS_INTERFACE envars (#8)
* Automatically triggering setup scripts in post_install()

* Add wireless interface and dingo config scripts

* Find setup scripts using find_in_workspaces, and trigger automatically

* Fix script names

Co-authored-by: Joey Yang <jyang@clearpathrobotics.com>

--- a/dingo_bringup/CMakeLists.txt
+++ b/dingo_bringup/CMakeLists.txt
@@ -13,7 +13,7 @@ install(FILES scripts/can-udp-bridge.conf scripts/can-udp-bridge.sh
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
-install(PROGRAMS scripts/install scripts/set-dingo-o
+install(PROGRAMS scripts/install scripts/set-dingo-config scripts/set-wireless-interface
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
