currently has symbol lookup error

--- a/dingo_base/CMakeLists.txt
+++ b/dingo_base/CMakeLists.txt
@@ -22,6 +22,12 @@ endif()
 # Find ament packages and libraries for ament and system dependencies
 ################################################################################
 find_package(ament_cmake REQUIRED)
+find_package(hardware_interface REQUIRED)
+find_package(pluginlib REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(puma_motor_driver REQUIRED)
+find_package(puma_motor_msgs REQUIRED)
+find_package(socketcan_interface REQUIRED)
 
 ################################################################################
 # Build
@@ -37,9 +43,37 @@ find_package(ament_cmake REQUIRED)
 #   src/dingo_logger.cpp)
 # target_link_libraries(dingo_node ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 # add_dependencies(dingo_node ${catkin_EXPORTED_TARGETS})
+
+add_library(
+  ${PROJECT_NAME}
+  SHARED
+  src/dingo_hardware.cpp
+)
+ament_target_dependencies(
+  ${PROJECT_NAME}
+  hardware_interface
+  pluginlib
+  rclcpp
+	puma_motor_msgs
+	socketcan_interface
+	puma_motor_driver
+)
+target_include_directories(
+  ${PROJECT_NAME}
+  PUBLIC
+  include
+	${puma_motor_driver_INCLUDE_DIRS}
+)
+
+pluginlib_export_plugin_description_file(hardware_interface dingo_hardware.xml)
 ################################################################################
 # Install
 ################################################################################
+install(
+  TARGETS ${PROJECT_NAME}
+  DESTINATION lib
+)
+
 install(
 	DIRECTORY launch config
   DESTINATION share/${PROJECT_NAME}
