--- a/dingo_bringup/CMakeLists.txt
+++ b/dingo_bringup/CMakeLists.txt
@@ -17,13 +17,13 @@ install(
   DESTINATION share/${PROJECT_NAME}
 )
 
-# install(FILES scripts/can-udp-bridge.conf scripts/can-udp-bridge.sh
-#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-# )
+install(FILES scripts/can-udp-bridge.conf scripts/can-udp-bridge.sh
+  DESTINATION bin
+)
 
-# install(PROGRAMS scripts/install scripts/set-dingo-o
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+install(PROGRAMS scripts/install scripts/set-dingo-o
+  DESTINATION bin
+)
 
 # if (CATKIN_ENABLE_TESTING)
 #   find_package(roslaunch REQUIRED)
