Add dependency for dingo_tests

--- a/dingo_robot/package.xml
+++ b/dingo_robot/package.xml
@@ -12,6 +12,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <run_depend>dingo_bringup</run_depend>
+  <run_depend>dingo_tests</run_depend>
   <!-- Removed dependency on firmware for now. -->
   <!-- <run_depend>dingo_firmware</run_depend> -->
 
