--- a/dingo_bringup/package.xml
+++ b/dingo_bringup/package.xml
@@ -14,6 +14,7 @@
   <exec_depend>lms1xx</exec_depend>
   <exec_depend>realsense2_camera</exec_depend>
   <exec_depend>robot_upstart</exec_depend>
+  <exec_depend>ros_mscl</exec_depend>
   <exec_depend>socat</exec_depend>
   <exec_depend>urg_node</exec_depend>
   <exec_depend>velodyne_pointcloud</exec_depend>
