--- a/dingo_bringup/package.xml
+++ b/dingo_bringup/package.xml
@@ -12,9 +12,9 @@
   <exec_depend>depth_image_proc</exec_depend>
   <exec_depend>dingo_base</exec_depend>
   <exec_depend>lms1xx</exec_depend>
+  <exec_depend>microstrain_inertial_driver</exec_depend>
   <exec_depend>realsense2_camera</exec_depend>
   <exec_depend>robot_upstart</exec_depend>
-  <exec_depend>ros_mscl</exec_depend>
   <exec_depend>socat</exec_depend>
   <exec_depend>urg_node</exec_depend>
   <exec_depend>velodyne_pointcloud</exec_depend>
