Added Wibotic charging status to dingo_lighting Renamed PUMA can interface to vcan0 Added Wibotic launch to accessories.launch

--- a/dingo_bringup/scripts/can-udp-bridge.conf
+++ b/dingo_bringup/scripts/can-udp-bridge.conf
@@ -1,5 +1,5 @@
 [Unit]
-Description=Bridge UDP packets to can0 device
+Description=Bridge UDP packets to vcan0 device
 After=network.target
 
 [Service]
