Adding Sick TIM551 lidar

--- a/dingo_base/package.xml
+++ b/dingo_base/package.xml
@@ -32,6 +32,7 @@
   <exec_depend>dingo_description</exec_depend>
   <exec_depend>python3-scipy</exec_depend>
   <exec_depend>rosserial_python</exec_depend>
+  <exec_depend>sick_tim</exec_depend>
   <exec_depend>teleop_twist_joy</exec_depend>
   <exec_depend>tf</exec_depend>
   <exec_depend>topic_tools</exec_depend>
